Updated main page and fixed styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Eventually by HTML5 UP</title>
+		<title>Deep NLP Course Landing Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,9 +15,24 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Eventually</h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				<h1>Deep NLP Course</h1>
+				<p>An advanced course on using cutting-edge deep learning techniques for natural language processing.
+				<ul>
+					<li>PyTorch</li>
+					<li>Attention Models</li>
+					<li>Concrete and Gumbel-Softmax Distributions</li>
+					<li>GANs for text generation</li>
+					<li>Recursive Neural Networks</li>
+					<li>Reinforcement Learning</li>
+					<li>And much more...</li>
+				</ul>
+				The course features video lectures, source code breakdowns, coding exercises, handy lecture notes
+				and quick guides, neural network training tips and techniques, and more! Taught by machine learning experts.
+				<br><br>
+				$9.99 lifetime access.
+				<br>
+				Sign up for the waiting list here.
+				</p>
 			</header>
 
 		<!-- Signup Form -->
@@ -25,17 +40,11 @@
 				<input type="email" name="email" id="email" placeholder="Email Address" />
 				<input type="submit" value="Sign Up" />
 			</form>
-
+			<br>
 		<!-- Footer -->
 			<footer id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; DeepNLPCourse</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</footer>
 
