Updated main page and fixed styling

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 			</form>
 			<br>
 		<!-- Footer -->
-			<footer id="footer">
-				<ul class="copyright">
-					<li>&copy; DeepNLPCourse</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</footer>
+			% <footer id="footer">
+			% 	<ul class="copyright">
+			% 		<li>&copy; DeepNLPCourse</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+			% 	</ul>
+			% </footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
