Added google analytics

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				The course features video lectures, source code breakdowns, coding exercises, handy lecture notes
 				and quick guides, neural network training tips and techniques, and more! Taught by machine learning experts.
 				<br><br>
-				$9.99 lifetime access.
+				&#36 9.99 lifetime access.
 				<br>
 				Sign up for the waiting list here.
 				</p>
@@ -51,11 +51,6 @@
 			</form>
 			<br>
 		<!-- Footer -->
-			% <footer id="footer">
-			% 	<ul class="copyright">
-			% 		<li>&copy; DeepNLPCourse</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
-			% 	</ul>
-			% </footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
